--- a/packages.config
+++ b/packages.config
@@ -3,13 +3,7 @@
     <package id="git" />
     <package id="sed" />
     <package id="make" />
+    <package id="ruby" /><!-- require version=2.3+ but ranges not supported yet https://github.com/chocolatey/choco/issues/800 -->
+    <package id="xsltproc" />
     <package id="gnuwin32-coreutils.portable" />
-    <package id="docker" />
-    <!-- docker-machine version restriction https://github.com/docker/machine/issues/4424#issuecomment-377727985 -->
-    <package id="docker-machine" />
-    <package id="virtualbox" />
-    <!-- 
-    	<package id="docker-for-windows" />
-		Commented because: Docker for Windows requires Windows 10 Pro or Enterprise version 14393, or Windows server 2016 RTM to run
-	-->
 </packages>
