Add npm puppeteer + openssl CLI tool

--- a/packages.config
+++ b/packages.config
@@ -9,4 +9,5 @@
     <package id="nodejs" />
     <package id="plantuml" />
     <package id="sublimetext3" />
+    <package id="openssl.light" />
 </packages>
