--- a/packages.config
+++ b/packages.config
@@ -6,7 +6,7 @@
     <package id="ruby" /><!-- require version=2.3+ but ranges not supported yet https://github.com/chocolatey/choco/issues/800 -->
     <package id="xsltproc" />
     <package id="gnuwin32-coreutils.portable" />
-    <package id="nodejs" />
+    <package id="nodejs" verson="11.3.0" />
     <package id="plantuml" />
     <package id="sublimetext3" />
     <package id="openssl.light" />
