--- a/install.config
+++ b/install.config
@@ -3,11 +3,9 @@
     <package id="git" />
     <package id="sed" />
     <package id="make" />
-    <package id="ruby" /><!-- require version=2.3+ but ranges not supported yet https://github.com/chocolatey/choco/issues/800 -->
+    <package id="ruby" version="2.3.3"/>
     <package id="xsltproc" />
     <package id="gnuwin32-coreutils.portable" />
     <package id="nodejs" verson="11.3.0" />
     <package id="plantuml" />
-    <package id="sublimetext3" />
-    <package id="openssl.light" />
 </packages>
