--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,15 @@ image: Visual Studio 2017
 build: off
 
 test_script:
-  - appveyor AddMessage -Category Information "Test install script"
+  - appveyor AddMessage -Category Information "Test install script/package & docs generation"
+  - echo Insall via chocolatey package
+  - pushd .\chocolatey
+  - choco pack
+  - choco install metanorma -dv -s "'.;https://chocolatey.org/api/v2/'"
+  - echo Insall chocolatey package returned %ERRORLEVEL%
+  - popd
+  - choco uninstall metanorma
+  - echo Install via script
   - bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/master/install.bat %cd%\install.bat & .\install.bat
   - echo Install script returned %ERRORLEVEL%
   - refreshenv
