--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,25 +7,22 @@ build: off
 
 test_script:
   - appveyor AddMessage -Category Information "Test install script (ruby local)"
-  - bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/master/install.bat %cd%\install.bat & .\install.bat
+  - bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/%APPVEYOR_REPO_COMMIT%/install.bat %cd%\install-%APPVEYOR_REPO_COMMIT%.bat & .\install-%APPVEYOR_REPO_COMMIT%.bat
   - echo "Script returned %ERRORLEVEL%"
   - appveyor AddMessage -Category Information "Test install script (ruby local) finished"
-  - appveyor AddMessage -Category Information "Test documentation generation for unece-cefact-recommendation-42"
   - refreshenv
   - git clone https://github.com/riboseinc/unece-cefact-recommendation-42.git & cd unece-cefact-recommendation-42
+  - set PATH=c:\tools\ruby25\bin;%PATH% # make lookup ruby25 before preinstalled one
   - call make -f Makefile.win clean all
   - echo "Script returned %ERRORLEVEL%"
   - echo "Test install script (docker)"
-  - ps: (Invoke-WebRequest 'https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/powershell/docker.bat' -OutFile 'docker.bat'); .\docker.bat
+  - ps: $uri = "https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/$Env:APPVEYOR_REPO_COMMIT/docker.bat"; $outFile = "docker-$Env:APPVEYOR_REPO_COMMIT.bat"; Invoke-WebRequest $uri -OutFile $outFile; & ".\$outFile"
   - echo "Script returned %ERRORLEVEL%"
 
-after_test:
+on_finish:  
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\unece-cefact-recommendation-42.*
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\images
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\reference-docs
-
-artifacts:
-  - path: metanorma_install.log
-    name: install.log
-  - path: unece-cefact-recommendation-42.zip
-    name: result.zip
+  - ps: Push-AppveyorArtifact $Env:APPVEYOR_BUILD_FOLDER\metanorma_install.log
+  - ps: Push-AppveyorArtifact $Env:APPVEYOR_BUILD_FOLDER\install-*.bat
+  - ps: Push-AppveyorArtifact $Env:APPVEYOR_BUILD_FOLDER\unece-cefact-recommendation-42.zip
