--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,31 +1,26 @@
 version: '{build}'
 
-# https://help.appveyor.com/discussions/questions/1929-create-a-docker-machine-in-appveyor-build-nested-hypervisor-needed
-image: Visual Studio 2017
-
 build: off
 
-test_script:
-  - appveyor AddMessage -Category Information "Test install script (ruby local)"
-  - bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/master/install.bat %cd%\install.bat & .\install.bat
+install:
+  - appveyor AddMessage -Category Information "Install metanotrma"
+  - bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/%APPVEYOR_REPO_COMMIT%/install.bat %cd%\install.bat & .\install.bat
   - echo "Script returned %ERRORLEVEL%"
-  - appveyor AddMessage -Category Information "Test install script (ruby local) finished"
-  - appveyor AddMessage -Category Information "Test documentation generation for unece-cefact-recommendation-42"
+  - appveyor AddMessage -Category Information "Install docker"
+  - ps: (Invoke-WebRequest "https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/$Env:APPVEYOR_REPO_COMMIT/docker.bat" -OutFile 'docker.bat'); .\docker.bat
+  - appveyor AddMessage -Category Information "Script returned %ERRORLEVEL%"
   - refreshenv
+
+test_script:
   - git clone https://github.com/riboseinc/unece-cefact-recommendation-42.git & cd unece-cefact-recommendation-42
+  - set PATH=c:\tools\ruby25\bin;%PATH%
+  - gem install bundler -v 1.17.3
   - call make -f Makefile.win clean all
   - echo "Script returned %ERRORLEVEL%"
-  - echo "Test install script (docker)"
-  - ps: (Invoke-WebRequest 'https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/powershell/docker.bat' -OutFile 'docker.bat'); .\docker.bat
-  - echo "Script returned %ERRORLEVEL%"
 
-after_test:
+on_finish:
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\unece-cefact-recommendation-42.*
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\images
   - 7z a %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42.zip %APPVEYOR_BUILD_FOLDER%\unece-cefact-recommendation-42\reference-docs
-
-artifacts:
-  - path: metanorma_install.log
-    name: install.log
-  - path: unece-cefact-recommendation-42.zip
-    name: result.zip
+  - ps: Push-AppveyorArtifact $Env:APPVEYOR_BUILD_FOLDER\metanorma_install.log
+  - ps: Push-AppveyorArtifact $Env:APPVEYOR_BUILD_FOLDER\unece-cefact-recommendation-42.zip
